[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-constraint"
version = "0.1.0"
description = "Fleet coordination safety constraint runtime with GuardRunner, FleetMathCore, KeeperBridge, TempoSync, and SafetyWatcher"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Cocapn Fleet", email = "fleet@cocapn.ai"}]
keywords = ["fleet", "constraint", "safety", "holonomy", "consensus", "guard", "flux-c"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Tools",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[project.scripts]
fleet-constraint = "fleet_constraint.cli:main"

[tool.setuptools]
packages = ["fleet_constraint"]
